Tue Mar 13 07:23:20 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb (mon_try_enter): call @mon_muetx.try_lock.
	  Thanks, Keiju ISHITSUKA. [ruby-dev:30507]

Tue Mar 13 02:42:58 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/cgi.rb (CGI::header): IIS >= 5.0 does not need the nph
	  assumption any more; submitted by MIYASAKA Masaru <alkaid AT
	  coral.ocn.ne.jp> in [ruby-dev:30537].

Mon Mar 12 10:53:28 2007  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_asn1.c (Init_ossl_asn1): Let rdoc know about
	  externally defined modules; submitted by Technorama
	  Ltd. <oss-ruby AT technorama.net> in [ruby-bugs:PR#4704].

	* ext/openssl/ossl_bn.c (Init_ossl_bn): Ditto.

	* ext/openssl/ossl_cipher.c (Init_ossl_cipher): Ditto.

	* ext/openssl/ossl_digest.c (Init_ossl_digest): Ditto.

	* ext/openssl/ossl_hmac.c (Init_ossl_hmac): Ditto.

	* ext/openssl/ossl_pkey.c (Init_ossl_pkey): Ditto.

	* ext/openssl/ossl_pkey_dh.c (Init_ossl_dh): Ditto.

	* ext/openssl/ossl_pkey_dsa.c (Init_ossl_dsa): Ditto.

	* ext/openssl/ossl_pkey_rsa.c (Init_ossl_rsa): Ditto.

	* ext/openssl/ossl_rand.c (Init_ossl_rand): Ditto.

	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): Ditto.

Sun Mar 11 18:42:01 2007  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-mode.el (ruby-block-end-re): Support for the
	  exprimental ';;' terminator had been dropped.

Sun Mar 11 05:45:46 2007  Akinori MUSHA  <knu@iDaemons.org>

	* misc/README, misc/rdebug.el: Add rdebug.el, Emacs ruby-debug
	  interface based on rubydb3x.el; submitted by Martin Nordholts
	  <enselic AT gmail.com> in [ruby-bugs:PR#9023].

Sat Mar 10 07:20:28 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_TYPELIB#library_name,
	  WIN32OLE_TYPELIB#visible?.

	* test/win32ole/test_win32ole_typelib.rb: ditto.

Thu Mar  8 09:17:59 2007  Minero Aoki  <aamine@loveruby.net>

	* compile.c: iseq_compile -> rb_iseq_compile.

	* iseq.c: ditto.

	* intern.h: provide function prototype of Init_jump.
